--- a/arch/arm64/boot/dts/qcom/sdm850-lenovo-yoga-c630.dts
+++ b/arch/arm64/boot/dts/qcom/sdm850-lenovo-yoga-c630.dts
@@ -404,6 +404,7 @@
 		hid-descr-addr = <0x1>;
 
 		interrupts-extended = <&tlmm 37 IRQ_TYPE_LEVEL_HIGH>;
+		wakeup-source;
 	};
 
 	tsc2: hid@2c {
@@ -412,6 +413,7 @@
 		hid-descr-addr = <0x20>;
 
 		interrupts-extended = <&tlmm 37 IRQ_TYPE_LEVEL_HIGH>;
+		wakeup-source;
 	};
 };
 
@@ -425,6 +427,7 @@
 		hid-descr-addr = <0x1>;
 
 		interrupts-extended = <&tlmm 125 IRQ_TYPE_LEVEL_LOW>;
+		wakeup-source;
 
 		pinctrl-names = "default";
 		pinctrl-0 = <&i2c5_hid_active>;
@@ -496,6 +499,7 @@
 		hid-descr-addr = <0x1>;
 
 		interrupts-extended = <&tlmm 92 IRQ_TYPE_LEVEL_LOW>;
+		wakeup-source;
 
 		pinctrl-names = "default";
 		pinctrl-0 = <&i2c11_hid_active>;
